@@ -1,3 +1,7 @@
+2017-12-18  Enrico Schumann  <es@enricoschumann.net>
+
+	* R/functions.R (toLatex.data.frame): new method
+
 2017-11-15  Enrico Schumann  <es@enricoschumann.net>
 
 	* R/functions.R (fill_in): rename 'interp' to
